# winder

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile.dev  LICENSE  README.md  build_wheel.sh  build_wheels.sh  index.html  pyproject.toml
comparisons/mesh/6000/: benchmark_metrics_clean.csv
comparisons/points/6000/: benchmark_metrics_clean.csv
examples/: compare_mesh.py  compare_points.py  dipole_cloud.py  dipole_vis.py  sphere.py  sphere_profile.py  test_inf_nan.py
src/cpp/: CMakeLists.txt  aabb.h  binary_node.h  bvh8.cuh  bvh8.h  center_of_mass.h  geometry.h  lbvh.h  mat3x3.h  optimize.cu  optimize.cuh  tailor_coefficients.cuh  tailor_coefficients.h  tensor3.h  utils.cu  utils.h  vec3.h  winder.cpp  winder_cuda.cu  winder_cuda.h
src/cpp/kernels/: binary2bvh8.cu  binary2bvh8.cuh  brute_force.cu  brute_force.cuh  build_binary_tree.cu  build_binary_tree.cuh  bvh8_m2m.cu  bvh8_m2m.cuh  common.cuh  mesh.cu  mesh.cuh  node_approx.cuh  traversal.cu  traversal.cuh
src/cpp/tests/: test_binary2bvh8.cu  test_binary_tree_construction.cu  test_m2m.cu  test_quantization.cu  test_traversal.cu  test_tree_construction.cu  test_util_functions.cu
src/winder/: __init__.py
